<resources>
    <string name="app_name">ToDo_Ocio</string>

    <!--activity_lista-->

    <string name="lst_categorias">Categorias</string>
    <string name="btn_ver">Ver</string>
    <string name="btn_buscar">Buscar</string>
    <string name="vsb_scroll"></string>
    <string name="spin_filtradoTodo">Todos</string>
    <string name="spin_filtradoCine">Cines</string>
    <string name="spin_filtradoParque">Parques</string>
    <string name="spin_filtradoRestaurante">Restaurantes</string>
    <string name="btn_provisional">BtnProv</string> <!--este boton hace lo que haría seleccionar un elemento en la lista. provisional-->

    <!--activity_ver-->

    <string name="lbl_Nombre">Nombre</string>
    <string name="lbl_NombreLugar">...</string>
    <string name="lbl_Bio">Añada una descripción</string>
    <string name="mpv_Localizacion"></string>
    <string name="rtnBar"></string>
    <string name="img_Foto"></string>
    <string name="btn_guardar">Guardar</string>
    <string name="diag_tituloBorrado">¡Borrar registro!</string>
    <string name="diag_mensajeBorrado">Estás a punto de borrar el registro. ¿Deseas continuar?</string>
    <string name="btn_confirmar">Si</string>
    <string name="btn_cancelar">No</string>
    <string name="t_registroBorrado">El registro ha sido eliminado.</string>

    <!--activity_nuevo-->

    <string name="lbl_vNombre">Nombre del lugar:</string>
    <string name="lbl_vBio">Aquí va la descripción del lugar proporcionada</string>
    <string name="mpv_vLocalizacion"></string>
    <string name="rtn_vBar"></string>
    <string name="img_vFoto"></string>
    <string name="rdb_nCine">Cine</string>
    <string name="rdb_nParque">Parque</string>
    <string name="rdb_nRestaurante">Restaurante</string>

    <!--activity_mapa-->

    <string name="chk_cine">Cines</string>
    <string name="chk_parque">Parques</string>
    <string name="chk_restaurante">Restaurantes</string>
    <string name="chk_todo">Todos</string>
    <string name="mpv_mapa"></string>

    <!--activity_editar-->

    <string name="lbl_eNombre">Nombre del lugar:</string>
    <string name="lbl_eBio">Aquí va la descripción del lugar proporcionada</string>
    <string name="mpv_eLocalizacion"></string>
    <string name="rtn_eBar"></string>
    <string name="img_eFoto"></string>
    <string name="btn_editar">Editar</string>
    <string name="rdb_eCine">Cine</string>
    <string name="rdb_eParque">Parque</string>
    <string name="t_registroNuevo">El lugar ha sido guardado.</string>
    <string name="t_registroGuerdado">El lugar ha sido actualizado.</string>
    <string name="t_imagenNoEscogida">No has escogido ninguna imagen.</string>


    <!--Dialog-->

    <string name="Description">Seleccionar foto de: </string>
    <string name="Camera">Cámara</string>
    <string name="Gallery">Galería</string>




    <!--menu-->

    <string name="action_save">action_save</string>
    <string name="action_edit">action_edit</string>
    <string name="action_delete">action_delete</string>

    <!--MANIFEST-->
    <string name="google_maps_key">AIzaSyA0rDk_pY8d4eRC52hsBhs4VdX667nYIEk</string>

</resources>
