<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_eGuardar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/save"
        android:onClick="actualizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_eBio"
        android:layout_width="341dp"
        android:layout_height="136dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/lbl_vBio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_eNombreLugar" />

    <RatingBar
        android:id="@+id/rtn_eBar"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_eBio" />

    <ImageView
        android:id="@+id/img_eFoto"
        android:layout_width="160dp"
        android:layout_height="133dp"
        android:layout_marginBottom="37dp"
        android:layout_marginEnd="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/btn_new" />

    <TextView
        android:id="@+id/lbl_eLugar"
        android:layout_width="112dp"
        android:layout_height="33dp"
        android:layout_marginEnd="6dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="13dp"
        android:text="@string/lbl_vNombre"
        app:layout_constraintEnd_toStartOf="@+id/txt_nNombreLugar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_eRadioGroup" />

    <EditText
        android:id="@+id/txt_eNombreLugar"
        android:layout_width="228dp"
        android:layout_height="34dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="13dp"
        android:editable="true"
        android:text="@string/lbl_NombreLugar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_eGuardar" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mpv_eLocalizacion"
        android:layout_width="160dp"
        android:layout_height="133dp"
        android:layout_marginBottom="38dp"
        android:layout_marginStart="46dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/id_eRadioGroup"
        android:layout_width="305dp"
        android:layout_height="53dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rdb_eCine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:checked="false"
            android:text="@string/rdb_nCine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/rdb_eParque"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:checked="false"
            android:text="@string/rdb_nParque"
            app:layout_constraintStart_toEndOf="@+id/rdb_eCine"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/rdb_eRestaurante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:checked="false"
            android:text="@string/rdb_nRestaurante"
            app:layout_constraintStart_toEndOf="@+id/rdb_nParque"
            app:layout_constraintTop_toTopOf="parent" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_eCamara"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/camara"
        android:onClick="tomarFoto"
        app:layout_constraintEnd_toStartOf="@+id/btn_eGaleria"
        app:layout_constraintTop_toBottomOf="@+id/rtn_eBar" />

    <Button
        android:id="@+id/btn_eGaleria"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/galeria"
        android:onClick="galeria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rtn_eBar" />

</android.support.constraint.ConstraintLayout>