<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <CheckBox
        android:id="@+id/chk_cine"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:focusableInTouchMode="true"
        android:focusedByDefault="true"
        android:text="@string/chk_cine"
        app:layout_constraintBottom_toTopOf="@+id/chk_restaurante"
        app:layout_constraintEnd_toStartOf="@+id/chk_parque"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/chk_parque"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="16dp"
        android:focusableInTouchMode="true"
        android:focusedByDefault="true"
        android:text="@string/chk_parque"
        app:layout_constraintBottom_toTopOf="@+id/chk_todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.64" />

    <CheckBox
        android:id="@+id/chk_restaurante"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:focusableInTouchMode="true"
        android:focusedByDefault="true"
        android:text="@string/chk_restaurante"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="116dp" />

    <CheckBox
        android:id="@+id/chk_todo"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="27dp"
        android:layout_marginStart="8dp"
        android:focusableInTouchMode="true"
        android:focusedByDefault="true"
        android:text="@string/chk_todo"
        app:layout_constraintBottom_toTopOf="@+id/map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toEndOf="@+id/chk_restaurante" />


    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="357dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chk_restaurante"
        app:layout_constraintVertical_bias="0.0"
        tools:context="com.example.mapwithmarker.MapsMarkerActivity" />

    <!--<com.google.android.gms.maps.MapView-->
        <!--android:id="@+id/mvp_mapa"-->
        <!--android:layout_width="342dp"-->
        <!--android:layout_height="370dp"-->
        <!--android:layout_marginEnd="21dp"-->
        <!--android:layout_marginStart="21dp"-->
        <!--android:layout_marginTop="20dp"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintHorizontal_bias="0.0"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/chk_restaurante" />-->
</android.support.constraint.ConstraintLayout>